# assume-gui

./: .gitignore  Dockerfile  README.md  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: docker.yml  frontend.yml  python-package.yml
backend/: main.py  process.py
src/: ConnectionValidator.ts  DragDropCtx.tsx  Footer.tsx  Header.tsx  Home.css  Home.tsx  main.tsx  sendData.tsx  setupProxy.js  utils.ts
src/app/: ConnectionValidator.ts  DragDropCtx.tsx  Home.tsx  index.css  layout.tsx
src/app/ui/: Home.tsx  Market.tsx  NodeEditSidebar.tsx  NodeSelectSidebar.tsx  Nodes.tsx  Sidebar.tsx  Unit.tsx  World.tsx
src/app/ui/EditComponents/: UnitEdit.tsx
src/ui/: Edges.tsx  NodeEditSidebar.tsx  NodeSelectSidebar.css  NodeSelectSidebar.tsx  Nodes.tsx
src/ui/EditComponents/: Input.tsx  MarketEdit.tsx  MarketProductEdit.tsx  UnitEdit.tsx  UnitMarketEdit.tsx  WorldEdit.tsx
src/ui/EditPages/: MarketEdit.tsx  MarketProductEdit.tsx  UnitEdit.tsx  UnitMarketEdit.tsx  WorldEdit.tsx
src/ui/InputComponents/: Input.tsx  Modal.tsx  Select.tsx  types.ts
